@@ -1,3 +1,9 @@
+Mon Apr  7 11:44:23 UTC 2014  Martin Corino  <mcorino@remedy.nl>
+
+        * bin/PerlACE/ProcessAndroid.pm:
+          Fix problems with target caching and process re-execution
+          after arguments update.
+
 Sat Apr  5 10:13:26 UTC 2014  Martin Corino  <mcorino@remedy.nl>
 
         * ace/OS_NS_stdlib.inl:
